NTU-398 Use ECS logging rather than custom log message